--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.1",
+    "element-ui": "^2.13.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "mavon-editor": "^2.7.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
